# demo-web/src/main/java/com/hibuz/blockchain/web/rest/BlockChainResource.java
@@ -1,7 +1,9 @@
 package com.hibuz.blockchain.web.rest;
 
-import java.util.List;
-
+import com.hibuz.blockchain.client.BlockServiceGRpcClient;
+import com.hibuz.blockchain.core.BlockWrapper;
+import com.hibuz.blockchain.core.MyWallet;
+import com.hibuz.blockchain.proto.Block;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -9,29 +11,26 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.hibuz.blockchain.client.BlockServiceGrpcClient;
-import com.hibuz.blockchain.core.BlockWapper;
-import com.hibuz.blockchain.core.MyWallet;
-import com.hibuz.blockchain.proto.Block;
+import java.util.List;
 
 @RestController
 @RequestMapping("/api")
 public class BlockChainResource {
 
-	private BlockServiceGrpcClient client;
+	private BlockServiceGRpcClient client;
 
 	@Autowired
-	BlockChainResource(BlockServiceGrpcClient client) {
+	BlockChainResource(BlockServiceGRpcClient client) {
 		this.client = client;
 	}
 
 	@GetMapping("/")
-	public List<BlockWapper> getBlockList() {
+	public List<BlockWrapper> getBlockList() {
 		return MyWallet.chain;
 	}
 
 	@PostMapping("/")
-	public List<BlockWapper> sendBlock(@RequestParam String msg) {
+	public List<BlockWrapper> sendBlock(@RequestParam String msg) {
 		Block newBlock = MyWallet.newBlock(msg);
 		Block response = client.write(newBlock);
 		MyWallet.addBlock(response);
@@ -39,7 +38,7 @@ public class BlockChainResource {
 	}
 
 	@PostMapping("/recruit")
-	public List<BlockWapper> sendRecruitBlock() {
+	public List<BlockWrapper> sendRecruitBlock() {
 		String msg = MyWallet.recruitEmail();
 		return sendBlock(msg);
 	}
